<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="media">Медиа</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_in_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_url" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="search_is_empty">Ничего не нашлось</string>
    <string name="search_no_internet">Проблемы со связью</string>
    <string name="search_no_internet_load">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="search_history">История поиска</string>
    <string name="search_clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="e_mail" translatable="false">s.gorlov123@gmail.com</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="media_library">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlists_is_empty">Вы не создали \nни одного плейлиста</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_favorite_tracks" translatable="false">Избранных треков нет!</string>
    <string name="album_name">Название*</string>
    <string name="album_description">Описание</string>
    <string name="create_album">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Трек добавлен в плейлист</string>
    <string name="track_in_playlist">Трек уже есть в этом плейлисте</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="new_playlist_exit_dialog_name">Завершить создание плейлиста?</string>
    <string name="new_playlist_exit_dialog_description">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="error_save_image">Ошибка сохранения</string>
    <string name="delete_track_into_playlist">Хотите удалить трек?</string>
    <string name="want_delete_playlist">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="empty_tracks_into_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">Ок</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="empty_tracks_in_playlist">В этом плейлисте пока еще нет треков…</string>
    <string name="edit_playlist_success">изменен</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>
    <string name="notification_permission_denied">Нет разрешения на уведомления</string>
    <string name="looking_for">Вы искали</string>
</resources>