<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/title_settings"
            style="@style/Theme.PlaylistMaker"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:navigationIcon="@drawable/arrowback"
            app:title="@string/settings"
            app:titleMarginStart="0dp"
            app:titleTextAppearance="@style/HeaderTextStyle" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height_60dp"
            android:layout_marginTop="24dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/dark_theme" />

            <Switch
                style="@style/Theme.PlaylistMaker"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="6dp"
                android:enabled="true"
                android:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height_60dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/share_app" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/image_margin_end"
                android:backgroundTint="@color/yp_gray"
                android:src="@drawable/share"
                app:iconTint="@color/yp_gray" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/write_in_support"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height_60dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/write_in_support" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/image_margin_end"
                android:src="@drawable/support"

                app:iconTint="@color/yp_gray" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/user_agreement"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height_60dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/user_agreement" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/image_margin_end"
                android:src="@drawable/arrowforward"
                app:iconTint="@color/yp_gray" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>

