<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title_search"
        style="@style/Theme.PlaylistMaker"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/arrowback"
        app:title="@string/search"
        app:titleMarginStart="0dp"
        app:titleTextAppearance="@style/HeaderTextStyle" />

    <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_edittext">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="@null"
            android:cursorVisible="true"
            android:drawableStart="@drawable/search_edit_text"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/colorPrimaryVariant"
            android:textColorLink="@color/yp_blue"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/search_clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/clean_the_search_query"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/search_is_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="100dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/placeholder_empty_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_is_empty"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="100dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/placeholder_no_internet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_no_internet"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/large_text_size" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_no_internet_load"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/large_text_size" />
        <Button
            android:id="@+id/bt_search_update"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/search_update"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textSize="14sp"
            android:textColor="@color/bt_txt_color_variant"
            android:backgroundTint="@color/bt_bg_color_variant"
            android:textAllCaps="false"
            android:layout_gravity="center"
            app:cornerRadius="54dp"
            android:letterSpacing="0"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/search_history"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/large_text_size"
            android:textFontWeight="500"
            android:textColor="@color/colorOnPrimary" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <Button
            android:id="@+id/bt_clear_history"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/search_clear_history"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textSize="14sp"
            android:textColor="@color/bt_txt_color_variant"
            android:backgroundTint="@color/bt_bg_color_variant"
            android:textAllCaps="false"
            app:cornerRadius="54dp"
            android:letterSpacing="0"/>
    </LinearLayout>
</LinearLayout>
