<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb_arrowback"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/arrowback"
        app:title="@string/new_playlist"/>
    
    <ImageView
        android:id="@+id/playlist_cover_stroke"
        android:layout_width="312dp"
        android:layout_height="312dp"
        app:layout_constraintTop_toBottomOf="@+id/mtb_arrowback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:src="@drawable/album_cover_stroke" />

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/album_cover"
        app:layout_constraintTop_toTopOf="@id/playlist_cover_stroke"
        app:layout_constraintBottom_toBottomOf="@id/playlist_cover_stroke"
        app:layout_constraintStart_toStartOf="@id/playlist_cover_stroke"
        app:layout_constraintEnd_toEndOf="@id/playlist_cover_stroke" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover_stroke"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/icon_black_white"
        android:fontFamily="@font/ys_display_regular"
        app:boxStrokeWidth="1dp"
        app:boxStrokeErrorColor="@color/red_500"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:hintTextColor="@color/text_input_hint_color"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@null"
            android:inputType="text"
            android:layout_margin="0dp"
            android:hint="@string/album_name"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:hintTextColor="@color/text_input_hint_color"
        app:boxBackgroundMode="outline"
        android:textColorHint="@color/icon_black_white"
        android:fontFamily="@font/ys_display_regular"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@null"
            android:padding="16dp"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/album_description"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_create"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_create"
        android:enabled="false"
        android:backgroundTint="@color/yp_gray"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:text="@string/create_album"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>